# GTS_Plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompileDLL.bat  README.md  _BuildAndPackage.bat  _CreateModPackage.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
cmake/: AddCXXFiles.cmake  Package.cmake  Version.hpp.in  version.rc.in  xSEPlugin.cmake
cmake/ports/CommonlibSSE-NG-GTS/: portfile.cmake  vcpkg.json
contrib/Distribution/Config/: Runtime.toml
distribution/Config/: Runtime.toml
distribution/PapyrusSource/: GTSPileCleaner.psc  GTSPlugin.psc  GTSProgressionQuest.psc  GTSProxy.psc  GTSProxyPlayerAlias.psc  GTSStartProgressionQuest.psc  GTSUtilTalkToActorFragment.psc  QF_GTSProgressionQuest.psc
docs/: Implemented Features.md
src/: Constants.hpp  PCH.hpp  Version.hpp  xSEPlugin.cpp
src/API/: GTSPluginInterface.cpp  GTSPluginInterface.hpp  Racemenu.cpp  Racemenu.hpp  SmoothCam.cpp  SmoothCam.hpp  TrainWreck.cpp  TrainWreck.hpp
src/API/Impl/: TrainWreckAPI.hpp
src/Colliders/: ActorCollisionData.cpp  ActorCollisionData.hpp  CharacterController.cpp  CharacterController.hpp  ColliderData.cpp  CollidesWith.cpp  CollidesWith.hpp  Ragdoll.cpp  Ragdoll.hpp
src/Config/: Config.cpp  Config.hpp  ConfigModHandler.cpp  ConfigModHandler.hpp  ConfigUtil.hpp  KeybindList.hpp  Keybinds.cpp  Keybinds.hpp  SettingsList.hpp  SettingsModHandler.cpp  SettingsModHandler.hpp
src/Config/Settings/: SettingsAI.hpp  SettingsAdvanced.hpp  SettingsAudio.hpp  SettingsAutoAim.hpp  SettingsBalance.hpp  SettingsCamera.hpp  SettingsCollision.hpp  SettingsExperimental.hpp  SettingsGameplay.hpp  SettingsGeneral.hpp  SettingsHidden.hpp  SettingsKeybinds.hpp  SettingsPersistent.hpp  SettingsUI.hpp
src/Config/Util/: DynamicSettings.hpp  FileManager.hpp  FileUtils.cpp  FileUtils.hpp  KeybindHandler.cpp  KeybindHandler.hpp  SettingsHandler.hpp  SettingsOperations.hpp  SettingsSerializer.hpp  TomlHandler.hpp  TomlRefl.hpp  WindowSettingsHolder.hpp  WindowSettingsRegistry.hpp
src/Data/: Persistent.cpp  Persistent.hpp  Plugin.cpp  Plugin.hpp  Runtime.cpp  Runtime.hpp  Tasks.hpp  Time.cpp  Time.hpp  Transient.cpp  Transient.hpp
src/Data/Runtime/: LContainers.hpp  LExplosions.hpp  LFactions.hpp  LGlobals.hpp  LImpactDataSets.hpp  LKeywords.hpp  LLeveledItems.hpp  LMagicEffects.hpp  LPerks.hpp  LQuests.hpp  LRaces.hpp  LSoundDescriptors.hpp  LSpells.hpp  RuntimeData.hpp  RuntimeEntry.hpp
src/Data/Storage/: Persistent.cpp  Persistent.hpp  PersistentData.hpp  Transient.cpp  Transient.hpp  TransientData.hpp
src/Data/Util/: BasicRecord.hpp  CompressedRecord.hpp  MapRecord.hpp  MapSerializer.hpp  RuntimeData.hpp  RuntimeEntry.hpp  TLVSerializer.hpp
src/Debug/: DebugDraw.cpp  DebugDraw.hpp  Profiler.cpp  Profiler.hpp  Profilers.cpp  Profilers.hpp
src/Debug/DrawUtils/: DebugLine.cpp  DebugLine.hpp  DebugUtil.cpp  ObjectBound.cpp  ObjectBound.hpp
src/Debug/Profiler/: EntrypointProfilerHandle.cpp  EntrypointProfilerHandle.hpp  Profiler.cpp  Profiler.hpp  ProfilerHandle.cpp  ProfilerHandle.hpp
src/Debug/Util/: DebugLine.cpp  DebugLine.hpp  DebugUtil.cpp  DebugUtil.hpp  ObjectBound.cpp  ObjectBound.hpp
src/Events/: Events.cpp  Events.hpp
src/Hooks/: Hooks.cpp  Hooks.hpp
src/Hooks/Actor/: Actor.cpp  Actor.hpp  ActorEquipManager.cpp  ActorEquipManager.hpp  ActorValueOwner.cpp  ActorValueOwner.hpp  BSAnimationGraph.cpp  BSAnimationGraph.hpp  Controls.cpp  Controls.hpp  Damage.cpp  Damage.hpp  Detection.cpp  Detection.hpp  HeadTracking.cpp  HeadTracking.hpp  Jump.cpp  Jump.hpp  MagicTarget.cpp  MagicTarget.hpp  Perk.cpp  Perk.hpp  Race.cpp  Race.hpp  Scale.cpp  Scale.hpp  Sink.cpp  Sink.hpp
src/Hooks/Animation/: HeadtrackingGraph.cpp  HeadtrackingGraph.hpp  PreventAnimations.cpp  PreventAnimations.hpp
src/Hooks/Camera/: PlayerCamera.cpp  PlayerCamera.hpp  TESCamera.cpp  TESCamera.hpp  TESCameraState.cpp  TESCameraState.hpp
src/Hooks/Engine/: Input.cpp  Input.hpp  Main.cpp  Main.hpp  Present.cpp  Present.hpp  Settings.hpp  Window.cpp  Window.hpp
src/Magic/: Magic.cpp  Magic.hpp
src/Managers/: AttackManager.cpp  AttackManager.hpp  AttributeManager.cpp  AttributeManager.hpp  Attributes.cpp  Attributes.hpp  Camera.cpp  Camera.hpp  CameraManager.cpp  CameraManager.hpp  Contact.cpp  Contact.hpp  CrushManager.cpp  CrushManager.hpp  Explosion.cpp  Explosion.hpp  ExplosionManager.cpp  FurnitureManager.cpp  FurnitureManager.hpp  GTSManager.cpp  GTSManager.hpp  GTSSizeManager.cpp  GTSSizeManager.hpp  GtsManager.cpp  GtsSizeManager.cpp  HighHeel.cpp  HighHeel.hpp  HitManager.cpp  HitManager.hpp  Impact.cpp  Impact.hpp  MaxSizeManager.cpp  MaxSizeManager.hpp  ModEvent.cpp  ModEvent.hpp  OverkillManager.cpp  OverkillManager.hpp  RandomGrowth.cpp  RandomGrowth.hpp  Register.cpp  (+10 more)
src/Papyrus/: Height.cpp  ModEvents.cpp  Papyrus.cpp  Plugin.cpp  ProxyFunctions.cpp  ProxyFunctions.hpp  Scale.cpp  TotalControl.cpp
src/Profiler/: Profiler.cpp
src/RE/: RE.hpp
src/Rays/: AllCollector.cpp  AllCollector.hpp  Raycast.cpp
src/Scale/: DynamicScale.cpp  DynamicScale.hpp  Height.cpp  ModScale.cpp  Scale.cpp  Scale.hpp  ScaleUtils.cpp  ScaleUtils.hpp
src/Systems/: Plugin.cpp  Runtime.cpp  Runtime.hpp  Tasks.cpp  Tasks.hpp  Time.cpp  Time.hpp
src/UI/: DebugMenu.cpp  DebugMenu.hpp  GTSMenu.cpp  GTSMenu.hpp  ScaleformLogger.hpp  UIManager.cpp  UIManager.hpp
src/Utils/: AV.cpp  ActorBools.cpp  ActorBools.hpp  ActorUtils.cpp  ActorUtils.hpp  AnimationVars.cpp  AnimationVars.hpp  ButtCrushUtils.cpp  ButtCrushUtils.hpp  Camera.cpp  Camera.hpp  DeathReport.cpp  DifficultyUtils.cpp  DynamicScale.cpp  EffectUtils.cpp  EffectUtils.hpp  FindActor.cpp  FindActor.hpp  InitUtils.cpp  InitUtils.hpp  InputConditions.hpp  InputFunctions.cpp  ItemDistributor.cpp  ItemDistributor.hpp  KillDataUtils.cpp  KillDataUtils.hpp  Logger.cpp  Logger.hpp  Looting.cpp  Looting.hpp  MovementForce.cpp  MovementForce.hpp  Node.cpp  Node.hpp  PapyrusUtils.hpp  QuestUtil.cpp  QuestUtil.hpp  Random.hpp  ReCallGuard.hpp  Singleton.hpp  (+10 more)
src/managers/: vore.cpp  vore.hpp
src/papyrus/: totalcontrol.cpp
(+658 files in other folders)
